--- a/eddist-cron/Cargo.toml
+++ b/eddist-cron/Cargo.toml
@@ -30,3 +30,4 @@ redis = { version = "0.30.0", features = ["tokio-comp"] }
 log = "0.4.22"
 encoding_rs = { version = "0.8.34", features = ["fast-kanji-encode"] }
 rand = "0.9"
+futures = "0.3"
