--- a/docker-dev/nginx.conf
+++ b/docker-dev/nginx.conf
@@ -34,17 +34,6 @@ http {
         listen 8000;
         server_name localhost;
 
-
-        # Client SSR Path
-        location = / {
-            proxy_pass http://host.docker.internal:5173/;
-        }
-
-
-        # location ~ "^(/[a-z0-9\-_]{1,63}/\d{10}/?.*|/[a-z0-9\-_]/?)$" {
-        #     proxy_pass http://host.docker.internal:5173;
-
-        # }
         # Server API Path
         location /api {
             proxy_pass http://host.docker.internal:8080;
@@ -60,9 +49,14 @@ http {
             proxy_pass http://host.docker.internal:8080;
         }
 
-        # Client SSR Path
+        # Client SSR Path (client-v2 container)
         location / {
-            proxy_pass http://host.docker.internal:5173;
+            proxy_pass http://client-v2:5173;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
         }
     }
 }
