fix: improve docker file building

--- a/docker-prod/eddist-client/Dockerfile
+++ b/docker-prod/eddist-client/Dockerfile
@@ -1,20 +1,38 @@
+FROM --platform=amd64 node:22-bookworm-slim AS dependencies
+
+# Setup pnpm using Corepack
+ENV PNPM_HOME="/pnpm"
+ENV PATH="${PNPM_HOME}:${PATH}"
+RUN corepack enable
+
+# Copy package files for dependency installation
+COPY pnpm-lock.yaml pnpm-workspace.yaml package.json /app/
+COPY eddist-server/client-v2/package.json /app/eddist-server/client-v2/
+
+WORKDIR /app
+
+# Install production dependencies only
+RUN pnpm install --prod --frozen-lockfile
+
 FROM --platform=amd64 node:22-bookworm-slim
 
 # Setup pnpm using Corepack
-ENV PMPM_HOME="/pnpm"
-ENV PATH="${PMPM_HOME}:${PATH}"
+ENV PNPM_HOME="/pnpm"
+ENV PATH="${PNPM_HOME}:${PATH}"
 RUN corepack enable
 
-COPY pnpm-lock.yaml pnpm-workspace.yaml package.json /app/
-COPY eddist-server/client-v2/server.js /app/eddist-server/client-v2/
+WORKDIR /app
+
+# Copy workspace configuration
+COPY pnpm-workspace.yaml package.json /app/
+
+# Copy production dependencies from build stage
+COPY --from=dependencies /app/node_modules /app/node_modules
+COPY --from=dependencies /app/eddist-server/client-v2/node_modules /app/eddist-server/client-v2/node_modules
+
+# Copy application files (pre-built from CI)
 COPY eddist-server/client-v2/package.json /app/eddist-server/client-v2/
-COPY node_modules /app/
-COPY eddist-server/client-v2/node_modules /app/eddist-server/client-v2/
-COPY eddist-server/client-v2/app /app/eddist-server/client-v2/app
+COPY eddist-server/client-v2/server.js /app/eddist-server/client-v2/
 COPY eddist-server/client-v2/build /app/eddist-server/client-v2/build
-
-WORKDIR /app/
-
-RUN ["pnpm", "install", "--prod"]
 
 CMD ["pnpm", "-F", "eddist-client-v2", "start"]
