Add plugin system with example plugins for spam filtering, profanity replacement, content logging, and post counting
- Implemented a plugin architecture allowing dynamic content manipulation via Lua scripts.
- Added four example plugins
- Created a comprehensive README for plugin installation and usage instructions.
- Established a database schema for storing plugin metadata and configurations.
- Developed a robust API for plugins to interact with the Eddist platform, including content manipulation, logging, and HTTP requests.
- Introduced a sandbox environment for executing plugin scripts with safety and resource limits.

--- a/eddist-admin/Cargo.toml
+++ b/eddist-admin/Cargo.toml
@@ -44,3 +44,4 @@ rust-s3 = { version = "0.35.1", default-features = false, features = [
     "fail-on-err",
 ] }
 encoding_rs = "0.8.34"
+mlua = { version = "0.10.3", features = ["lua54", "async", "serialize", "send", "vendored"] }
