--- a/eddist-admin/client/package.json
+++ b/eddist-admin/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@monaco-editor/react": "^4.6.0",
     "@react-router/fs-routes": "^7.5.3",
     "@react-router/node": "^7.0.0",
     "@react-router/serve": "^7.0.0",
