--- a/eddist-server/Cargo.toml
+++ b/eddist-server/Cargo.toml
@@ -76,3 +76,4 @@ openidconnect = "4.0.0"
 url = "2.5.4"
 chacha20poly1305 = "0.10.1"
 toml = "0.8.20"
+mlua = { version = "0.10.3", features = ["lua54", "async", "serialize", "send", "vendored"] }
