--- a/eddist-server/Cargo.toml
+++ b/eddist-server/Cargo.toml
@@ -34,6 +34,7 @@ sqlx = { version = "0.8.5", default-features = false, features = [
     "chrono",
     "json",
     "uuid",
+    "migrate",
 ] }
 thiserror = "2.0.12"
 time = "0.3.36"
@@ -76,3 +77,8 @@ openidconnect = "4.0.0"
 url = "2.5.4"
 chacha20poly1305 = "0.10.1"
 toml = "0.8.20"
+
+[dev-dependencies]
+testcontainers = "0.25"
+testcontainers-modules = { version = "0.13", features = ["mysql", "redis"] }
+axum-test = "18.2"
