feat: add Redis pub/sub support for response and thread creation events

--- a/.docker-compose.env
+++ b/.docker-compose.env
@@ -13,6 +13,8 @@ BBS_NAME=<set your BBS name>
 RESTRICT_THREAD_CREATION_ON_NO_TINKER=false # plan to deprecate
 AXUM_METRICS=true # Expose axum metrics
 ENABLE_USER_REGISTRATION=true # Enable user registration feature (details is in docs directory)
+ENABLE_RES_PUB=true # Enable Redis pub/sub publishing when response creation succeeds to channel "bbs:event:res_created" (default: true). Set to false to disable.
+ENABLE_THREAD_PUB=true # Enable Redis pub/sub publishing when thread creation succeeds to channel "bbs:event:thread_created" (default: true). Set to false to disable.
 
 # If it is true, you need to encrypt client_secret using symmetric encrption to use user registration system
 # Symmetric algorithm is chacha20poly1305, and nonce is zero, aad is empty, key is tinker_secret (first 32 bit)
