--- a/eddist-admin/client/package.json
+++ b/eddist-admin/client/package.json
@@ -14,6 +14,7 @@
     "@react-router/fs-routes": "^7.9.6",
     "@react-router/node": "^7.9.6",
     "@react-router/serve": "^7.9.6",
+    "@tailwindcss/postcss": "^4.1.17",
     "@tanstack/react-query": "^5.90.10",
     "clsx": "^2.1.1",
     "flowbite": "^4.0.1",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@react-router/dev": "^7.9.6",
+    "@tailwindcss/vite": "^4.1.17",
     "@types/node": "^22.19.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
@@ -42,8 +44,7 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
     "openapi-typescript": "^7.10.1",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.18",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3",
     "vite": "^6.4.1",
     "vite-tsconfig-paths": "^5.1.4"
