chore: update code for tailwindcss v4 migration and flowbite 0.12 migration

--- a/eddist-admin/client/.flowbite-react/config.json
+++ b/eddist-admin/client/.flowbite-react/config.json
@@ -1,10 +1,10 @@
 {
   "$schema": "https://unpkg.com/flowbite-react/schema.json",
   "components": [],
-  "dark": true,
-  "path": "src/components",
+  "dark": false,
+  "path": "src/app",
   "prefix": "",
-  "rsc": true,
+  "rsc": false,
   "tsx": true,
   "version": 4
 }
