feat: Add editable terms support

--- a/docker-dev/nginx.conf
+++ b/docker-dev/nginx.conf
@@ -40,7 +40,7 @@ http {
         }
 
         # Server BBS Path
-        location ~ "^/([a-z0-9\-_]{1,63}/(subject(-metadent)?\.txt|dat/\d{10}\.dat|kako/\d{4}/\d{5}/\d{10}\.dat|head.txt|SETTING.TXT)|test/.*|auto-code|terms|robots\.txt|bbsmenu(\.json|\.html))" {
+        location ~ "^/([a-z0-9\-_]{1,63}/(subject(-metadent)?\.txt|dat/\d{10}\.dat|kako/\d{4}/\d{5}/\d{10}\.dat|head.txt|SETTING.TXT)|test/.*|auth-code|robots\.txt|bbsmenu(\.json|\.html))" {
             proxy_pass http://host.docker.internal:8080;
         }
 
