--- a/eddist-server/client-v2/package.json
+++ b/eddist-server/client-v2/package.json
@@ -21,6 +21,7 @@
     "morgan": "^1.10.1",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "react-hook-form": "^7.66.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.6",
     "swr": "^2.3.6",
