--- a/eddist-core/Cargo.toml
+++ b/eddist-core/Cargo.toml
@@ -4,16 +4,16 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serde = { version = "1.0.205", features = ["derive"] }
-chrono = { version = "0.4.38", features = ["serde"] }
+serde.workspace = true
+chrono.workspace = true
 # TODO: Remove this dependency and replace it with trait
-redis = { version = "0.30.0", features = ["tokio-comp"] }
-anyhow = "1.0.86"
-serde_json = { version = "1.0.118" }
-uuid = { version = "1.9.1", features = ["v4", "v7", "serde"] }
-encoding_rs = "0.8.34"
-sha3 = "0.10.8"
-tracing = "0.1.40"
-tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
-metrics = "0.24.2"
-ipnet = "2.9"
+redis.workspace = true
+anyhow.workspace = true
+serde_json.workspace = true
+uuid.workspace = true
+encoding_rs.workspace = true
+sha3.workspace = true
+tracing.workspace = true
+tracing-subscriber.workspace = true
+metrics.workspace = true
+ipnet.workspace = true
