--- a/eddist-admin/Cargo.toml
+++ b/eddist-admin/Cargo.toml
@@ -4,43 +4,28 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow = "1.0.86"
-async-trait = "0.1.81"
-axum = "0.8.4"
-chrono = "0.4.38"
-dotenvy = "0.15.7"
-log = "0.4.22"
-tower-sessions = "0.14.0"
-sqlx = { version = "0.8.5", default-features = false, features = [
-    "runtime-tokio",
-    "tls-rustls",
-    "mysql",
-    "chrono",
-    "macros",
-    "json",
-    "uuid",
-] }
-tokio = { version = "1.44.2", features = ["full"] }
-tower-http = { version = "0.5.2", features = ["fs", "trace", "normalize-path"] }
-tracing = "0.1.40"
-uuid = { version = "1.10.0", features = ["v7", "v4"] }
-oauth2 = { version = "5.0.0", features = ["reqwest"] }
-reqwest = { version = "0.12.15", default-features = false, features = [
-    "json",
-    "rustls-tls",
-] }
-time = "0.3.36"
-serde = { version = "1.0.205", features = ["derive"] }
-serde_json = { version = "1.0.122" }
-jsonwebtoken = "9.3.0"
-base64 = "0.22.1"
-redis = { version = "0.30.0", features = ["tokio-comp", "connection-manager"] }
-eddist-core = { path = "../eddist-core" }
-utoipa = { version = "5.3.1", features = ["uuid", "axum_extras", "chrono"] }
-tower-layer = "0.3.3"
-rust-s3 = { version = "0.35.1", default-features = false, features = [
-    "tokio-rustls-tls",
-    "tags",
-    "fail-on-err",
-] }
-encoding_rs = "0.8.34"
+anyhow.workspace = true
+async-trait.workspace = true
+axum.workspace = true
+chrono.workspace = true
+dotenvy.workspace = true
+log.workspace = true
+tower-sessions.workspace = true
+sqlx.workspace = true
+tokio.workspace = true
+tower-http = { workspace = true, features = ["fs", "trace", "normalize-path"] }
+tracing.workspace = true
+uuid.workspace = true
+oauth2.workspace = true
+reqwest.workspace = true
+time.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+jsonwebtoken.workspace = true
+base64.workspace = true
+redis = { workspace = true, features = ["connection-manager"] }
+eddist-core.workspace = true
+utoipa.workspace = true
+tower-layer.workspace = true
+rust-s3.workspace = true
+encoding_rs.workspace = true
