--- a/eddist-cron/Cargo.toml
+++ b/eddist-cron/Cargo.toml
@@ -4,30 +4,17 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tokio = { version = "1.44.2", features = ["full"] }
-sqlx = { version = "0.8.5", default-features = false, features = [
-    "runtime-tokio",
-    "tls-rustls",
-    "mysql",
-    "macros",
-    "chrono",
-    "json",
-    "uuid",
-] }
-anyhow = "1.0.86"
-cron = "0.15.0"
-chrono = { version = "0.4.38", features = ["serde"] }
-
-eddist-core = { path = "../eddist-core" }
-rust-s3 = { version = "0.35.1", default-features = false, features = [
-    "tokio-rustls-tls",
-    "tags",
-    "fail-on-err",
-] }
-uuid = { version = "1.9.1", features = ["v4", "v7", "serde"] }
-dotenvy = "0.15.7"
-redis = { version = "0.30.0", features = ["tokio-comp"] }
-log = "0.4.22"
-encoding_rs = { version = "0.8.34", features = ["fast-kanji-encode"] }
-rand = "0.9"
-futures = "0.3"
+tokio.workspace = true
+sqlx.workspace = true
+anyhow.workspace = true
+cron.workspace = true
+chrono.workspace = true
+eddist-core.workspace = true
+rust-s3.workspace = true
+uuid.workspace = true
+dotenvy.workspace = true
+redis.workspace = true
+log.workspace = true
+encoding_rs = { workspace = true, features = ["fast-kanji-encode"] }
+rand.workspace = true
+futures.workspace = true
