--- a/eddist-persistence/Cargo.toml
+++ b/eddist-persistence/Cargo.toml
@@ -4,25 +4,17 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow = "1.0.86"
-chrono = { version = "0.4.38", features = ["serde"] }
-dotenvy = "0.15.7"
-redis = { version = "0.30.0", features = ["tokio-comp", "connection-manager"] }
-serde = { version = "1.0.205", features = ["derive"] }
-serde_json = { version = "1.0.118" }
-sqlx = { version = "0.8.5", default-features = false, features = [
-    "runtime-tokio",
-    "tls-rustls",
-    "mysql",
-    "macros",
-    "chrono",
-    "json",
-    "uuid",
-] }
-tokio = { version = "1.44.2", features = ["full"] }
-futures = "0.3.30"
-eddist-core = { path = "../eddist-core" }
-tracing = "0.1.40"
-hyper = { version = "1.4.0", features = ["server", "http1"] }
-hyper-util = { version = "0.1.6", features = ["tokio"] }
-log = "0.4.22"
+anyhow.workspace = true
+chrono.workspace = true
+dotenvy.workspace = true
+redis = { workspace = true, features = ["connection-manager"] }
+serde.workspace = true
+serde_json.workspace = true
+sqlx.workspace = true
+tokio.workspace = true
+futures.workspace = true
+eddist-core.workspace = true
+tracing.workspace = true
+hyper = { workspace = true, features = ["server", "http1"] }
+hyper-util = { workspace = true, features = ["tokio"] }
+log.workspace = true
