Refactor captcha handling to support multiple providers
- Renamed CaptchaLikeConfig to CaptchaProviderConfig for clarity.
- Introduced CaptchaProviderConfig struct to encapsulate provider-specific configurations.
- Updated AppState to use Vec<CaptchaProviderConfig> instead of Vec<CaptchaLikeConfig>.
- Refactored captcha verification logic in external client to handle different providers dynamically.
- Enhanced error handling in captcha verification to include captured data.
- Updated database schema to store additional_info related to captcha verification.
- Created example captcha configuration file for easier setup.
- Modified auth code service to integrate new captcha handling logic and capture additional data.

--- a/eddist-server/Cargo.toml
+++ b/eddist-server/Cargo.toml
@@ -52,6 +52,7 @@ sha3.workspace = true
 sha2.workspace = true
 futures.workspace = true
 handlebars.workspace = true
+jsonpath-rust.workspace = true
 metrics.workspace = true
 metrics-exporter-prometheus.workspace = true
 axum-prometheus.workspace = true
