--- a/Cargo.toml
+++ b/Cargo.toml
@@ -88,6 +88,7 @@ metrics-exporter-prometheus = "0.17.0"
 axum-prometheus = "0.8.0"
 
 # Misc
+jsonpath-rust = "1.0.4"
 regex = "1.10.6"
 url = "2.5.4"
 rand = "0.9.1"
