--- a/eddist-admin/client/package.json
+++ b/eddist-admin/client/package.json
@@ -16,6 +16,8 @@
     "@react-router/serve": "^7.12.0",
     "@tailwindcss/postcss": "^4.1.17",
     "@tanstack/react-query": "^5.90.10",
+    "@tanstack/react-table": "^8.21.3",
+    "@tanstack/react-virtual": "^3.13.18",
     "clsx": "^2.1.1",
     "flowbite": "^4.0.1",
     "flowbite-react": "^0.12.10",
