Refactor API error handling and repository structure
- Introduced a centralized `ApiError` type for consistent error responses across routes.
- Updated routes in `terms.rs`, `threads.rs`, and `users.rs` to utilize the new error handling mechanism, replacing manual response building with `Result` types.
- Refactored repository interfaces and implementations for boards, threads, and responses to improve code organization and maintainability.
- Enhanced database queries in repositories to handle errors more gracefully and return appropriate results.
- Removed redundant response handling code, simplifying the logic in route handlers.

--- a/eddist-admin/Cargo.toml
+++ b/eddist-admin/Cargo.toml
@@ -29,3 +29,4 @@ utoipa.workspace = true
 tower-layer.workspace = true
 rust-s3.workspace = true
 encoding_rs.workspace = true
+thiserror.workspace = true
