--- a/eddist-admin/Cargo.toml
+++ b/eddist-admin/Cargo.toml
@@ -23,6 +23,8 @@ serde.workspace = true
 serde_json.workspace = true
 jsonwebtoken.workspace = true
 base64.workspace = true
+chacha20poly1305.workspace = true
+md-5.workspace = true
 redis = { workspace = true, features = ["connection-manager"] }
 eddist-core.workspace = true
 utoipa.workspace = true
